--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -7,6 +7,7 @@
     tools:context=".PlacesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPlaces"
         android:layout_width="409dp"
         android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
